added to project section

--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@ section{
     background-image: url(visuals/glob.png);
 }
 .img-4 {
-    background-image: url(visuals/calc.png);
+    background-image: url(visuals/logss.png);
 }
 .img-5 {
     background-image: url(visuals/pong.png);
