--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,10 @@ section{
     background-size: cover;
     border-radius: 5px 5px 0px 0px;
 }
-.row a {
+.school {
+    color: var(--text-color);
+}
+.row a:not(.school){
     background: transparent;
     border: 1px solid var(--prim-color);
     color: var(--text-color);
@@ -260,7 +263,7 @@ section{
     margin: 20px 50px;
     transition: ease all 0.65s;
 }
-.row a:hover {
+.row a:not(.school):hover {
     color: var(--bg-color);
     letter-spacing: 1.5px;
     box-shadow: inset 0 -4em 0 var(--prim-color);
