--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@
 }
 :root {
     --bg-color: rgb(8, 8, 7);
-    --prim-color: #cfc7ab;
+    --prim-color: rgb(224, 215, 182);
     --sec-color: #ebe9e9c5;
     --text-color: #fff;
     --large-font: 5.5rem;
@@ -28,6 +28,7 @@
     --circle-size: 50%;
     --blending: hard-light;
 }
+
 @keyframes moveInCircle {
     0% {
       transform: rotate(0deg);
@@ -242,7 +243,7 @@ svg {
 }
 .logo {
     width: 110px;
-    transition: transform 0.8s ease;
+    transition: transform 0.5s ease;
 }
 .logo:hover{
     transform: scale(0.9);
@@ -288,7 +289,6 @@ header {
     font-weight: 500;
     margin-bottom: 25px; 
 }
-
 span {
     color: var(--prim-color);
 }
@@ -302,7 +302,6 @@ span {
 .navbar {
     display: flex;
 }
-
 .navbar a {
     color: var(--prim-color);
     font-size: 1.2rem;
@@ -311,7 +310,6 @@ span {
     font-weight: 500;
     position: relative; 
 }
-
 .navbar a::before {
     content: '';
     position: absolute;
@@ -324,7 +322,6 @@ span {
     transform-origin: left;
     transition: 0.3s ease-in-out; 
 }
-
 .navbar a:hover::before {
     transform: scaleX(1) translateY(-20px);
     background-color: var(--prim-color); 
@@ -335,16 +332,146 @@ li {
 li:hover {
     transform: scale(1.1);
 }
+.about-text {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(220px, 1fr);
+    gap: 15px;
+}
+
+.grid-item {
+    cursor: pointer;
+    position: relative; 
+    overflow: hidden;
+    background-color: #f5f5f0;
+    color: black;
+    border-radius: 30px;
+    padding: 50px 40px;
+    text-align: center;
+    transition: 0.4s;
+}
+.grid-item:hover {
+    transform: scale(0.95);
+}
+.image-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.image-container img {
+    width: 100%; /* Ensure the image takes up 100% width of its container */
+    height: 100%; 
+    object-fit: cover; 
+}
+
+.item-1 {
+    clip-path: polygon(0 0,100% 0, 100% 75%, 0 70%);
+    grid-row: 1/3;
+    grid-column: 1/2;
+}
+
+.item-2 {
+    grid-row: 1/2;
+    grid-column: 2/4;
+}
+
+.item-3 {
+    grid-row: 1/2;
+    grid-column: 4/5;
+}
+
+.item-4 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    color: #000;
+    font-size: 30px;
+    
+}
+
+.item-5 {
+    grid-row: 2/3;
+    grid-column: 3/5;
+}
+
+.item-6 {
+    grid-row: 3/3;
+    grid-column: 1/2;
+}
+
+.item-7 {
+    grid-row: 3/3;
+    grid-column: 2/5;
+}
+
+/*.about-text {
+    max-width: 900px;
+    margin: 1rem;
+    display: grid;
+    grid-auto-columns: 1fr;
+    gap: 1rem;
+    grid-template-areas: 
+    "box1 box1 box2 box2 box3"
+    "box1 box1 box4 box5 box5"
+    "box1 box1 box7 box7 box7"
+    "box6 box6 box7 box7 box7"
+    ;
+}
+.grid-item {
+    background-color: #123;
+    padding: .5rem 1rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    background-repeat: .75rem;
+    overflow: hidden;
+    transition: all 200ms ease;
+}
+.grid-item:hover {
+    cursor: pointer;
+    outline: 1px solid #fff;
+}
+.item-1 {
+    grid-area: box1;
+}
+.item-2 {
+    grid-area: box2;
+}
+.item-3 {
+    grid-area: box3;
+}
+.item-4 {
+    grid-area: box4;
+}
+.item-5 {
+    grid-area: box5;
+}
+.item-6 {
+    grid-area: box6;
+}
+.item-7 {
+    grid-area: box7;
+}
+.item-4 .grid-bg {
+    background-color: #000000;
+    height: 100%;
+    font-size: 4rem;
+    display: grid;
+    place-content: center;
+    border-radius: .35rem;
+}*/
 #social {
-    font-size: 70px;
+    font-size: 60px;
     color: #ffffff;
     transition: 0.5s;
     padding: 0px 5px;
     z-index: 2;
+    color: var(--prim-color);
 }
 #social:hover {
     transform: rotateY(360deg);
-    color: var(--prim-color);
+    color: #fff;
 }
 #menu-icon {
     font-size: 28px;
@@ -352,20 +479,6 @@ li:hover {
     cursor: pointer;
     display: none;
 }
-.about-text {
-    display: grid;
-    margin: 0 auto;
-    max-width: 900px;
-    grid-template-columns: repeat(3,1fr);
-    grid-auto-rows: minmax(100px, auto);
-    grid-gap: 5px;
-}
-.about-text div{
-    border: 2px solid rgb(124, 124, 124);
-    border-radius: 10px;
-    padding: 100px;
-}
-
 .box {
     background: #0b0b13;
     padding: 40px 30px;
@@ -376,7 +489,6 @@ li:hover {
 .box img {
     width: 100px;
     height: auto;
-    
 }
 .copy {
     position: absolute;
@@ -441,7 +553,6 @@ li:hover {
         right: 0;
         display: flex;
         flex-direction: column;
-        background: #0b0b13;
         box-shadow: 0px 15px 30px 0px rgb(0 0 0 / 70%);
         text-align: center;
         transition: 0.3s ease-in-out;
@@ -472,7 +583,7 @@ li:hover {
         width: 490px;
         height: auto;
     }
-    .about {
+   /* .about {
         grid-template-columns: 1fr;
         text-align: center;
     }
@@ -481,10 +592,8 @@ li:hover {
     }
     .about-text p {
       max-width: 100%;  
-    }  
-    body {
-        background: rgb(32, 32, 32);
-    }
+    }  */
+
 }
 @media (max-width: 375px) {
     .header a {
