--- a/styles.css
+++ b/styles.css
@@ -439,22 +439,18 @@ li:hover {
 }
 @media (max-width: 795px) {
     
-    .home {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-        text-align: left;
-        margin-top: 80px;
-        height: 100vh;
+    .header a {
+        font-size: 30px;
     }
-    .home-text p {
-        max-width: 100%;
+    .home-text h1{
+        font-size: 100px;
     }
-    .home-img img {
-        max-width: 100%;
-        width: 490px;
-        height: auto;
+    .home-text h6 {
+        font-size: 30px;
     }
-
+    #social {
+        font-size: 65px;
+    }
 }
 @media (max-width: 375px) {
     .header a {
